neural networks model representation II

--- a/LogisticRegression/08_neural_networks_representation.ipynb
+++ b/LogisticRegression/08_neural_networks_representation.ipynb
@@ -78,7 +78,7 @@
     "$a^{(j)}_i$ is the \"activation\" of unit $i$ in layer $j$.  \n",
     "$\\Theta^{(j)}$ is the matrix of weights controlling function mapping from layer $j$ to layer $j + 1$.\n",
     "\n",
-    "$h_Theta(x)$ in this network gets computed the following way:\n",
+    "$h_\\Theta(x)$ in this network gets computed the following way:\n",
     "\n",
     "First, the activations of the nodes in the hidden layer are calculated:\n",
     "\n",
@@ -100,7 +100,67 @@
    "metadata": {},
    "source": [
     "### Model Representation II\n",
-    "\n"
+    "\n",
+    "Let's try and work out a vectorized implementation of the neural network described above.\n",
+    "\n",
+    "Before we described our network as:\n",
+    "\n",
+    "$$ a_1^{(2)} = g(\\Theta_{10}^{(1)}x_0 + \\Theta_{11}^{(1)}x_1 + \\Theta_{12}^{(1)}x_2) + \\Theta_{13}^{(1)}x_3) \\\\\n",
+    "a_2^{(2)} = g(\\Theta_{20}^{(1)}x_0 + \\Theta_{21}^{(1)}x_1 + \\Theta_{22}^{(1)}x_2) + \\Theta_{23}^{(1)}x_3) \\\\\n",
+    "a_3^{(2)} = g(\\Theta_{30}^{(1)}x_0 + \\Theta_{31}^{(1)}x_1 + \\Theta_{32}^{(1)}x_2) + \\Theta_{33}^{(1)}x_3) \\\\\n",
+    "h_\\Theta(x) = a_1^{(3)} = g(\\Theta_{10}^{(2)}a_0^{(2)} + \\Theta_{11}^{(2)}a_1^{(2)} + \\Theta_{12}^{(2)}a_2^{(2)}) + \\Theta_{13}^{(2)}a_3^{(2)}) $$\n",
+    "\n",
+    "Let's write the parameters passed to $g(z)$ like this:\n",
+    "\n",
+    "$$ z_1^{(2)} = \\Theta_{10}^{(1)}x_0 + \\Theta_{11}^{(1)}x_1 + \\Theta_{12}^{(1)}x_2) + \\Theta_{13}^{(1)}x_3 \\\\\n",
+    "z_2^{(2)} = \\Theta_{20}^{(1)}x_0 + \\Theta_{21}^{(1)}x_1 + \\Theta_{22}^{(1)}x_2) + \\Theta_{23}^{(1)}x_3 \\\\\n",
+    "z_3^{(2)} = \\Theta_{30}^{(1)}x_0 + \\Theta_{31}^{(1)}x_1 + \\Theta_{32}^{(1)}x_2) + \\Theta_{33}^{(1)}x_3 $$\n",
+    "\n",
+    "So now we can say that:\n",
+    "\n",
+    "$$ a_1^{(2)} = g(z_1^{(2)}) \\\\\n",
+    "a_2^{(2)} = g(z_2^{(2)}) \\\\\n",
+    "a_3^{(2)} = g(z_3^{(2)})$$\n",
+    "\n",
+    "Let's define the vector $z^{(2)}$ as:\n",
+    "\n",
+    "$$ z^{(2)} = \\begin{bmatrix}\n",
+    "z_1^{(2)} \\\\\n",
+    "z_2^{(2)} \\\\\n",
+    "z_3^{(2)} \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "If you look at how the element's of $z^{(2)}$ are defined you can see that $z^{(2)} = \\Theta^{(1)}x$. So we can calculate the vector $a^{(2)}$ (the second, hidden layer) in just two steps:\n",
+    "\n",
+    "$$ z^{(2)} = \\Theta^{(1)}x \\\\\n",
+    "   a^{(2)} = g(z^{(2)})$$\n",
+    "   \n",
+    "Now we need to add the bias unit $a_0^{(2)} (= 1)$ to the hidden layer so that:\n",
+    "\n",
+    "$$ a^{(2)} = \\begin{bmatrix}\n",
+    "a_0^{(2)} \\\\\n",
+    "a_1^{(2)} \\\\\n",
+    "a_2^{(2)} \\\\\n",
+    "a_3^{(2)} \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "And now we can write:\n",
+    "\n",
+    "$$z^{(3)} = \\Theta_{10}^{(2)}a_0^{(2)} + \\Theta_{11}^{(2)}a_1^{(2)} + \\Theta_{12}^{(2)}a_2^{(2)}) + \\Theta_{13}^{(2)}a_3^{(2)}$$\n",
+    "\n",
+    "As:\n",
+    "\n",
+    "$$ z^{(3)} = \\Theta^{(2)}a^{(2)} $$\n",
+    "\n",
+    "So that the final output of the network is:\n",
+    "\n",
+    "$$ h_\\Theta(x) = a^{(3)} = g(z^{(3)}) $$\n",
+    "\n",
+    "This process is known as *forward propagation* because each layer is computed and the result used to compute the next layer until we arrive at the output.\n",
+    "\n",
+    "This is cool because instead of being constrained to use the raw features $x$, this network gets to learn the features $a^{(2)}$, and use those as inputs to logistic regression. This might give us a better hypothesis than just using the raw features would."
    ]
   }
  ],
