examples and intuitions I notes

--- a/LogisticRegression/08_neural_networks_representation.ipynb
+++ b/LogisticRegression/08_neural_networks_representation.ipynb
@@ -162,6 +162,73 @@
     "\n",
     "This is cool because instead of being constrained to use the raw features $x$, this network gets to learn the features $a^{(2)}$, and use those as inputs to logistic regression. This might give us a better hypothesis than just using the raw features would."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples and Intuitions I\n",
+    "\n",
+    "We can use neural networks to model logical operators, like $x_1 \\text{ AND } x_2$, $x_1 \\text{ OR  }x_2$, $x_1 \\text{ XOR } x_2$ and so on.\n",
+    "\n",
+    "For example, let's build a neural network that models the OR function.\n",
+    "\n",
+    "We set our first theta matrix as:\n",
+    "\n",
+    "$$ \\Theta^{(1)} = [-10 \\quad 20 \\quad 20] $$\n",
+    "\n",
+    "The choice of values is somewhat arbitrary - but $\\Theta_1 > \\Theta_0$, $\\Theta_2 > \\Theta_0$ and $\\Theta_1 + \\Theta_2 > \\Theta_0$. So when we come to work out $h_{\\Theta}(x) = g(\\Theta_0 + \\Theta_1x_1 + \\Theta_2x_2)$ we get the following truth table:\n",
+    "\n",
+    "![credit: Andrew Ng Coursera](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/f_ueJLGnEea3qApInhZCFg_a5ff8edc62c9a09900eae075e8502e34_Screenshot-2016-11-23-10.03.48.png?expiry=1490227200000&hmac=Addo3fvQpW1Icn5JzkSON5o-dUxitYiFBV3JknAsXIo)\n",
+    "\n",
+    "That's:\n",
+    "\n",
+    "$$ \\begin{aligned}\n",
+    "   & x_1 = 0 \\\\\n",
+    "   & x_2 = 0 \\\\\n",
+    "   & g(-10 + 20 \\times 0 + 20 \\times 0) = g(-10) \\approx 0\n",
+    "   \\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "$$ \\begin{aligned}\n",
+    "   & x_1 = 0 \\\\\n",
+    "   & x_2 = 1 \\\\\n",
+    "   & g(-10 + 20 \\times 0 + 20 \\times 1) = g(10) \\approx 1\n",
+    "   \\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "$$ \\begin{aligned}\n",
+    "   & x_1 = 1 \\\\\n",
+    "   & x_2 = 0 \\\\\n",
+    "   & g(-10 + 20 \\times 1 + 20 \\times 0) = g(10) \\approx 1\n",
+    "   \\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "$$ \\begin{aligned}\n",
+    "   & x_1 = 1 \\\\\n",
+    "   & x_2 = 1 \\\\\n",
+    "   & g(-10 + 20 \\times 1 + 20 \\times 1) = g(30) \\approx 1\n",
+    "   \\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Remember that $g(z)$ is the sigmoid function and anything $\\approx 4$ or more is $\\approx 1$, and anything $\\approx -4$ or less is $\\approx 0$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
