--- a/06_logistic_regression_notes.ipynb
+++ b/06_logistic_regression_notes.ipynb
@@ -304,7 +304,7 @@
     "\n",
     "In full, then, our cost function for logistic regression is:\n",
     "\n",
-    "$$ J(\\theta) = -\\frac{1}{m} \\big[\\sum_{i=1}^{m} y^{(i)}\\log(h_\\theta(x^{(i)})) + (1 - y^{(i)})\\log(1 - h_\\theta(x^{(i)}))\\big] $$\n",
+    "$$ J(\\theta) = -\\frac{1}{m} \\bigg[\\sum_{i=1}^{m} y^{(i)}\\log(h_\\theta(x^{(i)})) + (1 - y^{(i)})\\log(1 - h_\\theta(x^{(i)}))\\bigg] $$\n",
     "\n",
     "Vectorised:\n",
     "\n",
@@ -415,9 +415,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:py27]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-py27-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -429,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
