--- a/LogisticRegression/08_neural_networks_representation.ipynb
+++ b/LogisticRegression/08_neural_networks_representation.ipynb
@@ -222,6 +222,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples and Intuitions II\n",
+    "\n",
+    "We saw above how to make a neural network that models the OR function. The theta matrix for OR is:\n",
+    "\n",
+    "$$ \\Theta^{(1)} = [-10 \\quad 20 \\quad 20] $$\n",
+    "\n",
+    "We can model AND and NOR with the following theta matrices:\n",
+    "\n",
+    "$$ \\text{AND: } \\Theta^{(1)} = [-30 \\quad 20 \\quad 20] $$\n",
+    "$$ \\text{NOR: } \\Theta^{(1)} = [10 \\quad -20 \\quad -20] $$\n",
+    "\n",
+    "These can be combined to model XNOR (output is 1 if and only if $x_1$ and $x_2$ are the same).  \n",
+    "\n",
+    "We'll use a neural network with three layers. To map between the first and second layer, we'll use a theta matrix that combines the AND and NOR theta matrices:\n",
+    "\n",
+    "$$ \\Theta^{(1)} = \\begin{bmatrix}\n",
+    "-30 \\quad \\quad 20 \\quad \\quad 20 \\\\\n",
+    "\\quad 10 \\quad -20 \\quad -20 \\\\\n",
+    "\\end{bmatrix} $$\n",
+    "\n",
+    "This is because AND outputs 1 iff $x_1$ and $x_2$ are 1 and NOR outputs 1 iff $x_1$ and $x_2$ are 0. XNOR outputs 1 iff $x_1$ and $x_2$ are the same, but it doesn't care if they're 1 or 0. So if the output of AND is 1 or the output of NOR is 1 then the output of XNOR is 1. So we can use the theta matrix for OR to map between the second and third layers.\n",
+    "\n",
+    "$$ \\Theta^{(2)} = [-10 \\quad 20 \\quad 20] $$\n",
+    "\n",
+    "![Andrew Ng Coursera](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/rag_zbGqEeaSmhJaoV5QvA_52c04a987dcb692da8979a2198f3d8d7_Screenshot-2016-11-23-10.28.41.png?expiry=1490486400000&hmac=pzIto1f-WOtBDz4-TmK_gjLjNdc4AaXAbNU2gIE4aS0)\n",
+    "\n",
+    "The values for our nodes are:\n",
+    "$$ \\begin{align*}& a^{(2)} = g(\\Theta^{(1)} \\cdot x) \\newline& a^{(3)} = g(\\Theta^{(2)} \\cdot a^{(2)}) \\newline& h_\\Theta(x) = a^{(3)}\\end{align*} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiclass Classification\n",
+    "\n",
+    "The method used for multiclass classification is similar to the one-vs-all method for logistic regression. Instead of either 1 or zero, our output is a vector of 1s and 0s.\n",
+    "\n",
+    "![Andrew Ng Coursera](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/9Aeo6bGtEea4MxKdJPaTxA_4febc7ec9ac9dd0e4309bd1778171d36_Screenshot-2016-11-23-10.49.05.png?expiry=1490486400000&hmac=6gkrNE6LW7xAyFOoVW_J5IpxjZ6KdeOEbqCQLGpL30k)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
