--- a/LogisticRegression/06_logistic_regression_notes.ipynb
+++ b/LogisticRegression/06_logistic_regression_notes.ipynb
@@ -123,13 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO : graph 2"
+    "# TODO : graph 2\n"
    ]
   },
   {
