some wk 7 notes

--- a/11_support_vector_machines.ipynb
+++ b/11_support_vector_machines.ipynb
@@ -22,27 +22,42 @@
     "\n",
     "$$-y\\log(\\frac{1}{1 + e^{-\\theta^Tx}}) - (1 - y)\\log(1 - \\frac{1}{1 + e^{-\\theta^Tx}})$$\n",
     "\n",
-    "Consider the case where $y = 1$. In this case, only the term $-y\\log(\\frac{1}{1 + e^{-\\theta^Tx}})$ from the cost function above matters, as the other is cancelled out.\n",
+    "Consider the case where $y = 1$. In this case, only the term $-\\log(\\frac{1}{1 + e^{-\\theta^Tx}})$ from the cost function above matters, as the other is cancelled out.\n",
     "\n",
-    "To build a support vector machine we're going to modify the $-y\\log(\\frac{1}{1 + e^{-\\theta^Tx}})$ cost function a little bit.\n",
+    "To build a support vector machine we're going to modify the $-\\log(\\frac{1}{1 + e^{-\\theta^Tx}})$ cost function a little bit.\n",
     "\n",
     "In the case of $y = 0$, we need to modify the term $\\log(1 - \\frac{1}{1 + e^{-\\theta^Tx}})$. \n",
     "\n",
-    "Let's say we're going to replace $-y\\log(\\frac{1}{1 + e^{-\\theta^Tx}})$ with $\\text{cost}_1(\\theta^Tx)$ and $(1 - y)\\log(1 - \\frac{1}{1 + e^{-\\theta^Tx}})$ with $\\text{cost}_0(\\theta^Tx)$.\n",
+    "Let's say we're going to replace $-\\log(\\frac{1}{1 + e^{-\\theta^Tx}})$ with $\\text{cost}_1(\\theta^Tx)$ and $-\\log(1 - \\frac{1}{1 + e^{-\\theta^Tx}})$ with $\\text{cost}_0(\\theta^Tx)$.\n",
     "\n",
     "The overall cost function for logistic regression is:\n",
     "\n",
-    "$$ J(\\theta) = \\frac{1}{m} \\bigg[\\sum_{i=1}^{m} y^{(i)}-\\log(h_\\theta(x^{(i)})) + (1 - y^{(i)})-\\log(1 - h_\\theta(x^{(i)}))\\bigg] $$\n"
+    "$$ J(\\theta) = \\frac{1}{m} \\bigg[\\sum_{i=1}^{m} y^{(i)}-\\log(h_\\theta(x^{(i)})) + (1 - y^{(i)})-\\log(1 - h_\\theta(x^{(i)}))\\bigg] + \\frac{\\lambda}{2m}\\sum^n_{j=1}\\theta^2_j $$\n",
+    "\n",
+    "And the overall cost function for support vector machine is:\n",
+    "\n",
+    "$$ J(\\theta) = \\frac{1}{m} \\bigg[\\sum_{i=1}^{m} y^{(i)}\\text{cost}_1(\\theta^Tx) + (1 - y^{(i)})\\text{cost}_0(\\theta^Tx)\\bigg] + \\frac{\\lambda}{2m}\\sum^n_{j=1}\\theta^2_j $$\n",
+    "\n",
+    "By convention, we don't use the $\\frac{1}{m}$ terms in support vector machines, and we let $C = \\frac{1}{\\lambda}$, so the cost function is more usually written as:\n",
+    "\n",
+    "$$ J(\\theta) = C \\bigg[\\sum_{i=1}^{m} y^{(i)}\\text{cost}_1(\\theta^Tx) + (1 - y^{(i)})\\text{cost}_0(\\theta^Tx)\\bigg] + \\frac{1}{2}\\sum^n_{j=1}\\theta^2_j $$\n",
+    "\n",
+    "But these two ways of expressing the cost function are equivalent.\n",
+    "\n",
+    "The hypothesis of the support vector machine doesn't output a probability, just a prediction 1 or 0."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Large Margin Intuition\n",
+    "\n",
+    "Large margin classifiers - what does that mean?\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
